--- a/html_2.css
+++ b/html_2.css
@@ -1,18 +1,21 @@
+body {
+    margin: 0px;
+   
+}
+
 .block1 {
     
-    margin-left: 15%;
-    margin-right: 15%;
+    
     background-color: rgb(66, 47, 68);
-    width: 1000px;
+    width: 100%;
     height: 500px;
 }
 .block2 {
 
     background-color: rgb(92, 75, 75);
     margin-top: 0;
-    margin-left: 15%;
-    margin-right: 15%;
-    width: 1000px;
+   
+    width: 100%;
     height: 80px;
 }
 .block3 {
@@ -23,6 +26,8 @@
     margin: 5px;
     text-align: center;
     color: aliceblue;
+    
+
 
 }
 p {
@@ -30,9 +35,7 @@ margin: 0;
 
 }
 .table {
-    margin-top: 30px;
-    margin-left: 100px;
-
+    
 }
 .paragraphbottom {
     text-align: center;
@@ -61,4 +64,10 @@ margin: 0;
 }
 .img {
     padding-top: 15px;
+}
+
+
+.flax-container {
+ width: 60%;
+ margin: auto;
 }
